# hmm-algorithms

./: Cargo.toml  README.md  decrypted.txt  encrypted.txt  text.txt
src/: hmm.rs  main.rs
