[package]
name = "lab2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.1"
ndarray-rand = "0.14.0"
ndarray-linalg =  { version = "0.16.0", features = ["openblas"] }
clap = { version = "4.0.29", features = ["derive"] }
regex = "1"
cipher-crypt = "0.18.0"
# openblas-src = "0.7"
